--- a/.github/workflows/update-image-tag.yml
+++ b/.github/workflows/update-image-tag.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Print Image Tag
         run: |
           echo ${{ github.event.client_payload.imageName }}
-          echo ${{ github.event.client_payload.Tag }}
+          echo ${{ github.event.client_payload.imageTag }}
