--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -13,7 +13,7 @@ permissions:
  
 jobs:
   validate:
-    name: Validate PR
+    name: Test Validate PR
     runs-on: ubuntu-latest
     container:
       image: node:22.15.0-alpine
